# starshot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  components.json  export.py  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-visualize.txt  shoot.py  tsconfig.json  visualize.py  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src/components/: login-form.tsx  starshot-logo.tsx
src/components/ui/: command.tsx  sidebar.tsx  table.tsx
src/lib/: api.ts  auth-client.ts  types.ts
src/server/: auth.ts  env.ts  geocode.ts  github-cache.ts  github-throttle.ts  github.ts  index.ts  search.ts  session.ts  sync.ts  target-utils.ts  targets.test.ts  targets.ts  time.ts
src/server/db/: index.ts  migration.sql  schema.ts
